# Zk-Fog-of-War

./: .gitignore  Cargo.toml  README.md  game_hub.wasm  index.html  package-lock.json  package.json
circuits/: Nargo.toml
circuits/src/: main.nr
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
src/: App.tsx  main.tsx
src/hooks/: useZKProof.ts
